--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
 <body>
 <header class="header_top">
 <div class="header_top_content">
-<img class="logo" src="logoRafaelWeb.png" title="Logo do site">
+<img class="logo" src="logo2.png" title="Logo do site">
 <nav class="header_top_menu">
 <ul>
 <li><a href="#">Quem Somos</a></li>
 <li><a href="#">Contato</a></li>
 </ul>
+
 </nav>
 </div>
 </header>
 <main>
-    <selction>
+    <section>
 <!--parte para chamar a atenção-->
     </selction>
-    <seletion>
+    <section>
 
-    </seletion>
+    </section>
     <header>
         <h1>Quem Somos</h1>
     </header>
@@ -37,6 +38,62 @@
        <p class="funcao">estudante do curso de tecnologia</p>
        <p>atualmente estou vinculada ao curso tecinico no seugundo nado do curso  </p> 
     </div>
+    <section>
+        <h1>Agricultura</h1>
+
+<p>Agricultura é a prática econômica que envolve a cultivação de alimentos, como o plantio de grãos e a produção de frutas. Essa é uma das principais áreas econômicas do Brasil.</p>
+
+<p>A agricultura é uma atividade econômica caracterizada pelo plantio e cultivo de alimentos. A fixação da população nômade contribuiu para a produção alimentar em nível mundial. Atualmente, a atividade agrícola é umas das principais da economia mundial. Os sistemas agrícolas estão divididos em extensivo e intensivo. Esses modelos são subdivididos em diferentes tipos de agricultura, como a permacultura e o agronegócio. O Brasil é um dos principais produtores de alimentos de todo o mundo.</p>
+
+<h1>Resumo sobre agricultura</h1>
+<ul>
+    <li>A agricultura é uma prática econômica que se iniciou especialmente em razão da fixação da população humana devido à necessidade de produção de alimentos.</li>
+O termo agricultura remete ao conjunto de atividades da parte primária da economia que se baseia na cultivação de plantas.
+Os diferentes tipos de agricultura estão associados aos modelos extensivo e intensivo de produção agrícola. São 
+A agricultura é uma atividade de grande importância econômica e estratégica, especialmente no fornecimento de alimentos.
+O Brasil é um grande produtor mundial de bens primários, como soja, café, laranja, milho, algodão e cana-de-açúcar.
+O termo agropecuária designa o conjunto de atividades primárias que reúnem o cultivo de alimentos e a criação de animais.
+</ul>
+</section>
+ <section>
+        <h1>  O que é agricultura?</h1>
+        <P>A agricultura é uma prática econômica que envolve o cultivo de espécies vegetais para a obtenção de alimentos e matérias-primas. Essa atividade econômica faz parte do setor primário da economia, que compreende as atividades pecuárias e extrativistas, além da própria agricultura. Essa prática tem grande importância em termos econômicos e estratégicos em nível mundial.</P>
+ 
+    </section> 
+   <section> 
+<H1> História da agricultura</H1>
+
+<li>A agricultura iniciou-se especialmente em razão da fixação da população humana. A partir do fim do nomadismo, o ser humano sentiu a necessidade de cultivar seus próprios alimentos de forma fixa, ou seja, ao contrário do processo de coleta que ocorria nas sociedades nômades. Assim, a partir da fixação humana, houve o crescimento da agricultura.</li>
+Essa prática se desenvolveu ao longo da história por meio de processos como a urbanização e a industrialização, que aumentou a necessidade de acesso aos alimentos e às matérias-primas. Nesse contexto, destaca-se a Revolução Verde, processo de modernização das atividades agropecuárias que culminou na mecanização do campo e no aumento da produtividade.</p>
+<p>A agricultura é, atualmente, um importante componente das atividades primárias da economia, com destaque para países subdesenvolvidos e emergentes. O crescimento da mecanização do solo, da biotecnologia e do investimento de capitais aumentou progressivamente a capacidade de plantio e colheita de alimentos, mas resultou em impactos ambientais significativos
+</section>
+<section>
+    <h1>Sistemas agrícolas</h1>
+ <li> Conforme as características das práticas agropecuárias, a agricultura é dividida em dois grandes sistemas, sendo eles o extensivo e o intensivo. As características desses sistemas agrícolas estão expostas a seguir.</li>
+</section>
+<section>
+    <h1>Agricultura extensiva</h1>
+    <img src="agricultura-extensiva.webp" width="45%">
+    <img src="aricultura extenciva.png" width="45%">
+    <li>O uso de mão de obra braçal e familiar é uma característica do modelo extensivo de produção.</li>
+ <p>A agricultura extensiva é caracterizada pela adoção de técnicas tradicionais de cultivo.Esse modelo está fortemente vinculado à agricultura familiar, de baixa escala, baseada na policultura e praticada em médias e pequenas propriedades. A agricultura extensiva utiliza menos ferramentas tecnológicas, emprega menos mão de obra e consome menores investimentos em capital. Por sua vez, os impactos ambientais gerados por esse modelo agrícola são diminutos.</p>
+</section>
+<section>
+  <h1>Agricultura intensiva</h1><br>
+  <img src="trator.png" width="40%">
+  <img src="intensiva.png" width="=50%">
+<li>A mecanização do solo e da lavoura é uma característica do modelo intensivo de produção.</li>
+<p>A agricultura intensiva é caracterizada pelo uso de modernas práticas agrícolas, com emprego de tecnologia de ponta, insumos e agroquímicos diversos, máquinas e equipamentos, e elevado investimento de capitais. Esse modelo gera maior produtividade das lavouras, emprega mão de obra muito qualificada e resulta na intensa mecanização do campo. Porém, causa inúmeros impactos ambientais resultantes da alteração da paisagem natural e do uso intensivo da terra.</p>
+ <section> 
+    <h1>Quais são os tipos de agricultura?</h1>
+<p>Os tipos de agricultura estão comumente associados aos dois grandes sistemas agrícolas: o modelo extensivo e o modelo intensivo.</P>
+<section> 
+    <h1> Agricultura familiar</h1>
+<p>A agricultura familiar é caracterizada pelo emprego de mão de obra familiar, em pequenas propriedades, com baixo investimento de capital e foco na policultura de alimentos. Esse é um dos tipos de agricultura vinculada ao sistema extensivo de produção.</p>
+
+</section>
+
+ </section>
 </main>
 <footer>
 <!-- RODAPÉ DO SITE-->
