--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <h1>Quem Somos</h1>
         </header>
         <div class="header quemsomos_content">
-            <img src="#" class="">
+            <img src="foto.jpeg" class=""  width="10%">
             <div class="header quemsomos_content ">
-                <h2>giovana dias</h2>
+                <h2>giovana dias viana</h2>
             </div>
         <p class="funcao">estudante do curso de tecnologia</p>
         <p>atualmente estou vinculada ao curso tecinico no seugundo nado do curso  </p> 
