--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="header quemsomos_content">
             <img src="foto.jpeg" class=""  width="10%">
             <div class="header quemsomos_content ">
-                <h2>giovana dias viana</h2>
+                <h2>Giovana Dias Viana</h2>
             </div>
-        <p class="funcao">estudante do curso de tecnologia</p>
-        <p>atualmente estou vinculada ao curso tecinico no seugundo nado do curso  </p> 
+        <p class="funcao">Estudante do curso de tecnologia</p>
+        <p>Atualmente estou vinculada ao curso tecinico no seugundo ano do curso  </p> 
         </div>
     </section>
 <!-- ***************************************************************** -->
